font awesome icon has been removed from header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="log-in-area">
                 <form action="#">
                     <div class="for-email">
-                        <label for="email">Email or Phone<i class="fa fa-address-book" aria-hidden="true"></i>
+                        <label for="email">Email or Phone
                         </label>
                         <input type="text">
                     </div>
